--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
 asgiref==3.5.2
-Django==4.0.4
+dj-database-url==0.5.0
+Django==4.0.2
 gunicorn==20.1.0
 psycopg2==2.8.6
 sqlparse==0.4.2
 whitenoise==6.2.0
+wheel==0.37.1
+pyairtable==1.4.0
+requests==2.29.0
+sqlparse==0.4.4
